<resources>
    <string name="app_name">Happy Alarm</string>
    <string name="alarm_set_message_1_day">Alarm set for over %1$s day from now.</string>
    <string name="alarm_set_message_multiple_days">Alarm set for over %1$s days from now.</string>
    <string name="alarm_set_message_hours_minutes">Alarm set for %1$s hours and %2$s minutes from now.</string>
    <string name="alarm_set_message_hour_minutes">Alarm set for %1$s hour and %2$s minutes from now.</string>
    <string name="alarm_set_message_hours_minute">Alarm set for %1$s hours and %2$s minute from now.</string>
    <string name="alarm_set_message_hour_minute">Alarm set for %1$s hour and %2$s minute from now.</string>
    <string name="alarm_set_message_hour">Alarm set for %1$s hour from now.</string>
    <string name="alarm_set_message_hours">Alarm set for %1$s hours from now.</string>
    <string name="alarm_set_message_minutes">Alarm set for %1$s minutes from now.</string>
    <string name="alarm_set_message_minute">Alarm set for %1$s minute from now.</string>
    <string name="alarm_set_message_less_than_minute">Alarm set for less than %1$s minute from now.</string>
    <string name="alarm_sounding_message">Alarm sounding</string>
    <string name="alarm_snoozed_content_title">Alarm snoozed</string>
    <string name="alarm_notification_channel_name">Alarm notification channel</string>
    <string name="empty_view_text_main">No alarms</string>
    <string name="empty_view_text_gallery">No photos</string>
    <string name="description_repeat_alarm">Repeat Alarm</string>
    <string name="description_dismiss_alarm">Dismiss Alarm</string>
    <string name="description_ringtone_picker">Ringtone Picker</string>
    <string name="action_share">Share Photo</string>
    <string name="action_delete">Delete Photo</string>
    <string name="activity_gallery_title">Gallery</string>
    <string name="action_gallery">Open Gallery</string>
    <string name="dialog_confirm_delete">Yes</string>
    <string name="dialog_cancel_delete">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="pref_volume_key" translatable="false">volume</string>
    <string name="pref_volume_label">Alarm volume</string>
    <string name="pref_snooze_time_key" translatable="false">snooze_time</string>
    <string name="pref_snooze_time_label">Snooze</string>
    <string name="pref_snooze_time_label_1_minute">1 minute</string>
    <string name="pref_snooze_time_label_3_minutes">3 minutes</string>
    <string name="pref_snooze_time_label_5_minutes">5 minutes</string>
    <string name="pref_snooze_time_label_10_minutes">10 minutes</string>
    <string name="pref_silence_time_key" translatable="false">auto_silence_time</string>
    <string name="pref_silence_time_label">Auto silence</string>
    <string name="pref_silence_time_label_1_minute">1 minute</string>
    <string name="pref_silence_time_label_3_minutes">3 minutes</string>
    <string name="pref_silence_time_label_5_minutes">5 minutes</string>
    <string name="pref_silence_time_label_10_minutes">10 minutes</string>
    <string name="pref_vibrate_key" translatable="false">vibrate</string>
    <string name="pref_vibrate_label">Vibrate</string>
    <string name="pref_vibrate_summary_off_label">Off</string>
    <string name="pref_vibrate_summary_on_label">On</string>
    <string name="title_gallery_activity">Gallery</string>
    <string name="title_settings_activity">Settings</string>
    <string name="alert_dialog_title_delete_photo">Delete photo</string>
    <string name="alert_dialog_message_delete_photo">Are you sure you wish to delete this photo?</string>
    <string name="share_photo_title">Share using</string>
    <string name="notification_alarm_triggered_content_text">Smile!</string>
    <string name="notification_alarm_snoozed_content_text_minute">Alarm snoozed for %1$s minute.</string>
    <string name="notification_alarm_snoozed_content_text_minutes">Alarm snoozed for %1$s minutes.</string>
    <string name="notification_action_dismiss_title">Dismiss</string>
    <string name="notification_action_snooze_title">Snooze</string>
    <string name="snackbar_delete_alarm_text">Alarm deleted</string>
    <string name="snackbar_delete_alarm_action">UNDO</string>
    <string name="ringtone_picker_title">Alarm sound</string>
    <string name="button_dismiss_snooze_text">Snoozed</string>
    <string name="description_down_arrow">Expand alarm details</string>
    <string name="description_up_arrow">Shrink alarm details</string>
    <string name="checkbox_repeat_text">Repeat</string>
    <string name="snooze_dismiss_minute">Snoozed for %1$s minute</string>
    <string name="snooze_dismiss_minutes">Snoozed for %1$s minutes</string>
    <string name="checkbox_repeat_monday_text">M</string>
    <string name="checkbox_repeat_tuesday_text">T</string>
    <string name="checkbox_repeat_wednesday_text">W</string>
    <string name="checkbox_repeat_thursday_text">T</string>
    <string name="checkbox_repeat_friday_text">F</string>
    <string name="checkbox_repeat_saturday_text">S</string>
    <string name="checkbox_repeat_sunday_text">S</string>
    <string name="button_delete_text">Delete</string>
    <string name="repeating_summary_every_day">Every day</string>
    <string name="repeating_summary_tomorrow">Tomorrow</string>
    <string name="repeating_summary_today">Today</string>
    <string name="action_graph">View Graph</string>
    <string name="title_graph_activity">Your Happy Times</string>
    <string name="dataset_label_graph_activity">Wake Up Time</string>
    <string name="snackbar_graph_data_error_text">Oops! You need to take multiple photos before you can compare your waking times.</string>
</resources>
