<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SeekBarPreference
        android:key="@string/pref_volume_key"
        android:title="@string/pref_volume_label"
        android:defaultValue="1"/>

    <androidx.preference.ListPreference
        android:key="@string/pref_snooze_time_key"
        android:title="@string/pref_snooze_time_label"
        android:defaultValue="5"
        android:entries="@array/pref_snooze_time_option_labels"
        android:entryValues="@array/pref_snooze_time_option_values"/>

    <androidx.preference.CheckBoxPreference
        android:key="@string/pref_vibrate_key"
        android:title="@string/pref_vibrate_label"
        android:defaultValue="@bool/pref_vibrate_default"
        android:summaryOff="@string/pref_vibrate_summary_off_label"
        android:summaryOn="@string/pref_vibrate_summary_on_label"/>

</androidx.preference.PreferenceScreen>