<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alarm_background"
    android:stateListAnimator="@animator/alarm_detail_selection">

    <Button
        android:id="@+id/button_alarm_time"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackground"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_dismiss_snooze"
        style="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/button_dismiss_snooze_text"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/outline_alarm_snoozed_off_24"
        android:drawablePadding="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_dismiss_alarm"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alarm_time" />

    <Button
        android:id="@+id/button_pick_ringtone"
        style="@style/TextAppearance.AppCompat.Body1"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:drawableStart="@drawable/outline_ringtone_24"
        android:drawablePadding="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_ringtone_picker"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dismiss_snooze" />

    <CheckBox
        android:id="@+id/checkbox_repeat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:button="@drawable/checkbox_repeat"
        android:contentDescription="@string/description_repeat_alarm"
        app:layout_constraintEnd_toStartOf="@+id/switch_alarm"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_arrow_down"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/outline_keyboard_arrow_down_24"
        android:contentDescription="@string/description_down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/button_dismiss_snooze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_alarm" />

    <ImageView
        android:id="@+id/image_arrow_up"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/outline_keyboard_arrow_up_24"
        android:contentDescription="@string/description_up_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>